syntax = "proto3";

service StatusService{
    rpc StatusCommand (RequestStatus) returns (StatusResponse);
}

message RequestStatus{
}

message StatusResponse{
}