syntax = "proto3";

service ClientService {
  rpc TxSubmit (TxSubmitRequest) returns (TxSubmitReply);
  rpc Status (StatusRequest) returns (StatusReply);
}

message DadInt {
    string key = 1;
    int32 value = 2;
}

message TxSubmitRequest {
  string client = 1;
  repeated string readDads = 2;
  repeated DadInt writeDads = 3;
}

message TxSubmitReply {
	repeated DadInt dadInts = 1;
}

message StatusRequest {}

message StatusReply {
    bool ok = 1;
}
